cmake_minimum_required(VERSION 3.10.0)
project(Filehub)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -O2")

#添加头文件的查找目录 && 在编译参数"-l" ，指定搜索头文件的路径
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

add_subdirectory(src)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SEC_LIST)

ADD_EXECUTABLE(main ${SEC_LIST} ${FILE_CONTROLL})

#EXECUTABLE_OUTPUT_PATH && LIBRARY_OUTPUT_PATH用来指定二进制文件位置和库文件路径，这里不包括中间文件
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
INSTALL(TARGETS main DESTINATION bin)